modules/gdscript/tests/scripts/parser/errors/yield_instead_of_await.gd
#GDTEST_PARSER_ERROR

signal event

func test():
	yield("event")
